--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -341,6 +341,8 @@ div.b-missing__tabs {
 	list-style: none;  
 	
 	margin: 0;
+
+    min-width: 500px;
 }                    	
 	
 	.b-missing__tab { 
