--- a/app/views/main/_volunteer_information.html.erb
+++ b/app/views/main/_volunteer_information.html.erb
@@ -1,6 +1,5 @@
 <div class="container_16 p-main-suggest-info" type="volunteer"> 
-	<div class="grid_10 p-main-suggest-head"><h2>Что мы предлагаем детективам</h2></div>
-	<div class="grid_6 p-main-suggest-head"><h2>Как пользоваться сайтом</h2></div>
+  <div class="grid_10 p-main-suggest-head"><h2>Как вы можете помочь в поисках</h2></div>
 
 	<div class="clear"></div>
 	
