--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -85,12 +85,17 @@
 	width: 90%;
 	margin: 10px 5% 9px;
 }           
-	div.b-missing__i_saw_in {
+	div.b-missing__i_saw_in, div.b-missing__i_saw_in_change_container {
       margin: 1em 0.9em 0.5em;
     }
 
     .b-missing__i_saw_in_change {
       margin: .5em -0.3em .5em;
+    }
+
+    .b-missing__i_saw_in_change_field {
+      width: 98%;
+      margin-bottom: .5em;
     }
 	                  
 	input.b-missing__i_saw_in {
