--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -234,7 +234,10 @@ div.b-missing__share {
 }              
 
 	.b-missing__comment_author {
+        color: #0065CC;
 		text-decoration: none;
+
+        display: inline;
 	}
 
 	.b-missing__comment_date {
