--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -67,6 +67,11 @@ input[type="text"] {
     
 /*		Выравниваем по высоте */
 	    padding-top: 4px;
+      }
+      .b-form__nav_current_element .missing_step {
+        color: #000;
+        text-decoration: none;
+        cursor: default;
 	  }
 
 .b-form__field {
