--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -555,9 +555,11 @@ div.b-missing__tabs {
 
 .p-new-missing__header {
   margin-bottom: 1em;
-}
+  }
 
-
+  .b-new-missing-form-container{
+    overflow: hidden;
+  }
 
     .b-missing__add_photo_description {
       width: 14em;
@@ -572,3 +574,6 @@ div.b-missing__tabs {
     .p-missing .b-form__questions_container {
       margin: -1em 0 1em;
     }
+
+
+
