--- a/app/views/missings/_form.html.erb
+++ b/app/views/missings/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="b-form__background b-form__questions_container l-hidden">
+<div class="b-form__background b-form__questions_container l-hidden b-new-missing-form" data-step="history">
 	<div class="container_16">
 		<div class="b-form__questions_infinity grid_16">    
 			<div class="b-form__questions_fade"></div>  
@@ -14,43 +14,34 @@
 	<div class="clear"></div>
 </div>
 
+
 <%= form_for @missing, :url => "/add_missing/save_step.json", :remote => true, :html => { 
 	:multipart => true,
 	:next_step => "/add_missing/" + @missing.next_step,
 	:previous_step => "/add_missing/" + @missing.previous_step,
-	:id => "new_missing" } do |f| %>       
-
-<div class="b-form__background form">	
-	<div class="container_16">
-		<div class="grid_16">
 	
-		  <% if @missing.errors.any? %>
-		    <div id="error_explanation">
-		      <h2><%= pluralize(@missing.errors.count, "error") %> prohibited this missing from being saved:</h2>
-
-		      <ul>
-		      <% @missing.errors.full_messages.each do |msg| %>
-		        <li><%= msg %></li>
-		      <% end %>
-		      </ul>
-		    </div>
-		  <% end %>
-  
-		  <%= render @missing.current_step, :f => f %>
-
-		</div>
-	</div>          
-	<div class="clear"></div>
-</div>
+	:id => "new_missing" } do |f| %>       
+    <div class="b-new-missing-form-container">
+    <% @missing.steps.each do |step| %>
+      <div class="b-form__background form b-new-missing-form" data-step="<%= step %>">	
+          <div class="container_16">
+              <div class="grid_16">
+                <%= render step, :f => f %>
+              </div>
+          </div>          
+          <div class="clear"></div>
+      </div>
+    <% end %>
+    </div>
 
 	<!-- End grid_16 and container -->
 	<div class="b-form__action_panel">    
 		<div class="container_16">
 			<div class="grid_16">
 				<div class="b-form__actions">
-					<%= f.submit "Предыдущий шаг", :class => "b-form__back_button", :tabindex => "-1" unless @missing.first_step? %>
-                    <%= f.submit "Следующий шаг", :class => "b-form__next_button" unless @missing.last_step? || (current_user && @missing.current_step == "history") %>
-                    <%= f.submit "Опубликовать объявление", :class => "b-form__save_button blue" if @missing.last_step? || (current_user && @missing.current_step == "history") %>
+                  <%= f.submit "Предыдущий шаг", :class => "b-form__back_button", :style => @missing.first_step? ? "display: none;" : "", :tabindex => "-1" %>
+                  <%= f.submit "Следующий шаг", :class => "b-form__next_button", :style => @missing.last_step? || (current_user && @missing.current_step == "history") ? "display: none;" : "" %>
+                  <%= f.submit "Опубликовать объявление", :class => "b-form__save_button blue", :style => @missing.last_step? || (current_user && @missing.current_step == "history") ? "" : "display: none;" %>
                     
 				</div>  
 			</div>
