--- a/app/views/missings/show.html.erb
+++ b/app/views/missings/show.html.erb
@@ -9,7 +9,7 @@
 		</div>
 
 		<div class="b-missing__print_ad">
-          <%= image_tag "printer.png" %><a href="#">Печать объявления</a>
+          <%= image_tag "printer.png" %><a href="<%= missing_path(@missing) %>/print">Печать объявления</a>
 		</div>
 
         <div class="t-medium b-missing__date_location">
@@ -111,7 +111,7 @@
 			<% if comment.user.nil? %>
 				<%= link_to "Анонимный комментарий", "", :class => "t-medium b-missing__comment_author" %>    
 			<% else %>
-                <div class="t-medium b-missing__comment_author"><%= comment.user.name %></div> 
+                <div class="t-medium b-missing__comment_author"><бз%= comment.user.name %></div> 
 			<% end %>
 			<span class="b-missing__comment_date t-small"><%= comment.discussion_id %> <%= Russian.strftime comment.created_at, "%d %B" %></span>   
 			<%= tag :input, { :type => "button", :value => "Ответить", :class => "b-missing__comment_answer silver_action l-right" } %>
