--- a/app/assets/stylesheets/app/b-buttons.css.erb
+++ b/app/assets/stylesheets/app/b-buttons.css.erb
@@ -27,6 +27,10 @@
 	font-weight: bold;
 }      
 
+.b-auth__button.loggedin .ui-button-text {
+	padding-right: .8em;
+}
+
 .b-auth__button.loggedin.ui-state-active {
 	background-position: 95% 65%;
 } 
