--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -343,7 +343,8 @@ div.b-missing__share {
 /* Tabs */   
 div.b-missing__tabs {
 	position: absolute;
-	top: 49px;
+	top: 49px;      
+	min-width: 600px;
 }
 .b-missing__tabs {
 	list-style: none;  
