--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,13 +49,12 @@
 			<!-- Dialog with social auth buttons -->
 			<h3>Выберите сервис на котором вы зарегистрированны</h3>
 				
-				<div class="p-main-dialog-a-service-sep">&nbsp;</div>
-			
-				<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_fb.png" %>Facebook</a></div>
-				<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_tw.png" %>Twitter</a></div>
-				<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_gl.png" %>Google</a></div>
-				<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_vk.png" %>Вконтакте</a></div>
-				<div class="p-main-dialog-a-service-soc"><a href="#"><%= image_tag "soc_ya.png" %>Яндекс</a></div>
+				<div class="p-main-dialog-a-service-sep">&nbsp;</div>                                                
+				<div class="p-main-dialog-a-service-soc"><a href="#" class="b-auth__action" provider="vkontakte" url="<%= user_omniauth_authorize_path(:vkontakte) %>" data-width="600" data-height="400"><%= image_tag "soc_vk.png" %>Вконтакте</a></div>
+				<div class="p-main-dialog-a-service-soc"><a href="#" class="b-auth__action" provider="facebook" url="<%= user_omniauth_authorize_path(:facebook) %>" data-width="600" data-height="400"><%= image_tag "soc_fb.png" %>Facebook</a></div> 
+				<div class="p-main-dialog-a-service-soc"><a href="#" class="b-auth__action" provider="yandex" url="<%= user_omniauth_authorize_path(:yandex) %>" data-width="600" data-height="400"><%= image_tag "soc_ya.png" %>Яндекс</a></div>
+				<div class="p-main-dialog-a-service-soc"><a href="#" class="b-auth__action" provider="twitter" url="<%= user_omniauth_authorize_path(:mailru) %>" data-width="600" data-height="400"><%= image_tag "soc_tw.png" %>Mail.ru</a></div>
+				<div class="p-main-dialog-a-service-soc"><a href="#" class="b-auth__action" provider="google" url="<%= user_omniauth_authorize_path(:google) %>" data-width="600" data-height="400"><%= image_tag "soc_gl.png" %>Google</a></div>
 				
 				<div class="p-main-dialog-a-service-sep">&nbsp;</div>
 			
@@ -67,11 +66,59 @@
               <li><div>Пароль:</div><%= login_form.text_field :password, :tabindex => 3 %></li>
 			</ul>
 			
-            <%= login_form.submit "Войти", :tabindex => 5 %>
-			или 
-			<a class="p-main-dialog-a-service-submit_register" href="#">зарегистрироваться</a>
+            <%= login_form.submit "Войти", :tabindex => 5 %>    
+			<div class="p-main-dialog-a-service-registration_text">
+				или 
+				<a class="p-main-dialog-a-service-submit_register" href="#">зарегистрироваться</a>   
+			</div>
           <% end %>
+		</div>     
+		
+		<div class="b-head__registration_dialog p-main-dialog-a-afterlogin">
+
+			<ul>
+				<li>
+					<%= image_tag "missing-ico.png" %>
+					<h3>Если пропал близкий</h3>
+					<%= button_to "Создайте объявление", "/add_missing/", :method => :get, :class => "button t-medium_fat silver blow l-full_width"%>	
+				</li>
+				<li class="p-main-register-box__registration">   
+					<div>
+				   	 	<%= image_tag "volonter-ico.png" %>
+						<h3>Хотите помочь в поисках?</h3>  
+					
+						<%= tag :input, { :type => "button", :value => "Примите участие", :class => "button p-main-register t-medium_fat silver l-full_width", :for => "volunteer" } %>         
+					</div>
+					<div class="b-sidebar p-main-register-box volunteer l-hidden">
+						<p class="t-medium">Войдите через</p>
+						<div class="p-main-socials">         
+	                    <% omniauth_providers.each do |provider| %>
+	                      <button class="b-auth__button b-auth__action b-button_social" provider="<%= provider %>" url="<%= user_omniauth_authorize_path(provider) %>" data-width="600" data-height="400">
+	                    <% end %>
+						</div>
+						<p class="t-medium">или укажите электронную почту</p>   
+						<%= form_for User.new, :remote => true, :url => "/users.json", :class => "new_user" do |f| %>
+						<table class="l-full_width">
+							<tr><td class="b-login__field">
+								<%= f.text_field :email, :placeholder => "адрес электронной почты", :class => "b-login__field"  %> 
+								<label class="error allready l-hidden"></label>
+							</td><td class="b-login__button">
+								<%= f.submit "Продолжить"  %>
+							</td></tr>
+						</table>           
+						<% end %>
+					</div>
+				</li>     
+				<li>            
+					<%= image_tag "missing-ico.png" %>
+					<h3>Уже зарегистрированны?</h3>
+					<%= tag :input, { :type => "button", :value => "Войдите по паролю", :class => "button b-head__login t-medium_fat silver l-full_width" } %> 	
+				</li>
+			</ul>
+
+
 		</div>
+		
 	</div>
        
     
@@ -86,7 +133,7 @@
 		<%= link_to_unless_current image_tag('logo.png', :class => 'l-left'), '/' %>
 	</div>  
     <div class="b-head__auth grid_3">  
-		<button class="b-auth__button loggedin maroon l-right" provider="<%= current_user.provider %>"><%= current_user.name %></button>	
+		<button class="b-auth__button loggedin maroon l-right" provider="<%= current_user.provider %>"><%= current_user.name || current_user.email %></button>	
 		<div class="b-auth__list b-select__list ui-corner-bottom l-hidden">
             <%= link_to "Выйти", destroy_user_session_path, :method => :delete, :class => "b-select__list_item" %>
 		</div>
