--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -540,7 +540,7 @@ div.b-missing__tabs {
 	float: right;
 
 	height: 23px; 
-	padding: 5px 5px;
+	padding: 5px 10px;
 
 	top: -5px;
 	background: #f8f8f8;
@@ -548,9 +548,11 @@ div.b-missing__tabs {
 
 	.b-missing__print_ad img{
 		position: relative;
-		top: 5px;
+		top: 4px;
 		width: 16px;
-		height: 16px;
+		height: 16px;       
+		
+		margin: 0 .3em 0 0;
 	}
 
 
