--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -29,7 +29,7 @@
 		</ul>	
 	</div>
 	
-    <div class="grid_5" type="missing">
+    <div class="grid_5" type="volunteer" animate_missing="true">
       <ul class="p-main-info-list">
         <li><%= image_tag "missing-ico.png" %></li>
         <li><h3>Начните поиск объявлений</h3></li>
