--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -1,7 +1,7 @@
 form {
 	outline: none;
 }
-input[type="text"], textarea {
+input[type="text"], input[type="password"], input[type="email"], textarea {
 	padding: 4px 4px;
 	border: 1px solid #c4c4c4;
 	
@@ -10,7 +10,7 @@ input[type="text"], textarea {
 	box-shadow: inset 0px 2px 0px 0px #e2e2e2;
 }
 
-input[type="text"] {
+input[type="text"], input[type="password"], input[type="email"] {
 	height: 14px;
 }
 
@@ -476,6 +476,10 @@ input[type="text"] {
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
+}
+
+.b-form__question_form .b-form__label {
+	padding: 10px 0 5px;
 }
 
 /*
